--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.6",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.0"
     }
 }
